--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,7 @@ timezone: ''
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://blog.cins.cc
-permalink: :year/:month/:day/:title/
-# permalink: articles/:year/:month/:day/:name/
-# new_post_name: :year/:month/:title.md
+permalink: :year/:month/:category/:id/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -53,7 +51,7 @@ highlight:
   wrap: true
   hljs: false
 prismjs:
-  enable: false
+  enable: true
   preprocess: true
   line_number: true
   tab_replace: ''
@@ -70,6 +68,7 @@ index_generator:
 # Category & Tag
 default_category: uncategorized
 category_map:
+  React: react
 tag_map:
 
 # Metadata elements
