--- a/_config.yun.yml
+++ b/_config.yun.yml
@@ -125,7 +125,7 @@ social:
 # 公告
 notice:
   enable: true
-  content: 部分文章来自博主的掘金技术社区！ https://juejin.cn/user/3281399880616903
+  content: 部分文章来自博主的掘金技术社区！(https://juejin.cn/user/3281399880616903)
 
 # 背景图片
 bg_image:
